fix: placeholder text to idle grey color, fixed @ spacing issues in profile, fixed search button in container1 always being active

--- a/src/components/admin/AdminOverlay.css
+++ b/src/components/admin/AdminOverlay.css
@@ -116,6 +116,10 @@ input[type="text"],
   margin-bottom: 2.5rem;
 }
 
+.o-text-field::placeholder {
+  color: var(--color-idle-gray);
+}
+
 .o-weight-price-field {
   display: flex;
   flex-direction: row;
