--- a/src/components/admin/AdminParcelsPage/AdminParcelBody.css
+++ b/src/components/admin/AdminParcelsPage/AdminParcelBody.css
@@ -29,7 +29,6 @@
   flex-shrink: 0;
   border-radius: 0.375rem;
   border: 2px solid #cbd2e0;
-  /* text */
   flex: 1 0 0;
   color: #717d96;
   font-size: 1rem;
@@ -37,6 +36,10 @@
   line-height: 150%;
   letter-spacing: -0.01rem;
   background: #fdfdfd;
+}
+
+.AdminParcelSearchInput::placeholder {
+  color: var(--color-idle-gray);
 }
 
 .AdminParcelSearchBtn {
