--- a/src/components/landingpage/Header.css
+++ b/src/components/landingpage/Header.css
@@ -59,4 +59,5 @@ li {
 li:hover {
     color: hsl(220, 23%, 43%);
     cursor: pointer;
+    text-decoration: underline;
 }
